--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@netlify/functions": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.5",
-    "xrpl": "^2.1.1"
+    "xrpl": "^2.1.1",
+    "xumm-sdk": "^1.1.5"
   },
   "devDependencies": {
-    "netlify-cli": "^10.0.0",
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11"
+    "@types/react-dom": "^17.0.11",
+    "netlify-cli": "^10.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
