--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@netlify/functions": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
