--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@netlify/functions": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.38.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.5",
     "xrpl": "^2.1.1",
